tests/files/lexer_tests/should_fail/009.cmdr
/* command followed by <tuple_expr>
    expected: <command_string>, <string> or <variable> */
echo `echo '4'`;